testcases/neg/eval_type/valdecl_canfail_does_not_fail.bard
let val x: Int = (if false then "world" else 21) raisedTo {secret}
in
    send "hello"
end
